# CG-Project

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md  perlin_noise_array.py
.github/workflows/: cmake.yml
src/: camera.py  chunk.py  main.cpp  main.py  perlin_noise_array.py  world.py
